
Revision 4.3.6, released 2017-XX-XX
-----------------------------------

- Fixes to *lexicographicMode* option documentation to make it unambiguous.
- Unified `errorIndication` values produced by various parts of SNMP engine
  to be `ErrorIndication` instances. This fixes an issue with Twisted.

Revision 4.3.5, released 2017-03-24
-----------------------------------

- The getNext() and getBulk() calls of Twisted interface.
  now support ignoreNonIncreasingOid option.
- TextualConvention is now a new-style class.
- Fix to accidentally reset error-status when building confirmed class
  SNMPv1 PDU.
- Fix to possible infinite recursion in TextualConvention.prettyIn().
- Fixed crash when attempting to report unsupported request/notification
  PDU back to sender.

Revision 4.3.4, released 2017-03-01
-----------------------------------

- Fix to low-level SNMP API example to accommodate changed pyasn1
  SEQUENCE supporting iterator protocol.
- The pyasn1 version dependency bumped (0.2.3), SEQUENCE/SEQUENCE OF
  API calls adjusted to accommodate changed pyasn1 API (in part
  of .setComponentBy*() kw flags).
- Fixed crash on SNMP engine's invalid message counter increment.

Revision 4.3.3, released 2017-02-04
-----------------------------------

- Switched from now unmaintained PyCrypto to PyCryptodome.
- Switched to new-style classes.
- NotificationType now allows additional var-binds specified as
  MIB objects. A side effect of this change is that additional
  var-binds can only be added prior to .resolveMibObjects() is
  run.
- Non-standard (but apparently used by many vendors) Reeder AES192/256
  key localization algorithm implemented and set as default for
  usmAesCfb192Protocol and usmAesCfb256Protocol identifiers.
  Original and more standard implementation can still be used
  with the usmAesBlumenthalCfb192Protocol and
  usmAesBlumenthalCfb192Protocol IDs respectively.
- TextualConvention.prettyOut() improved to produce prettier and
  more SMI-compliant output.