@@ -6,7 +6,7 @@
 #
 
 
-class ErrorIndication(object):
+class ErrorIndication(Exception):
     """SNMPv3 error-indication values"""
 
     def __init__(self, descr=None):
@@ -41,13 +41,11 @@ class ErrorIndication(object):
 class SerializationError(ErrorIndication):
     pass
 
-
 serializationError = SerializationError('SNMP message serialization error')
 
 
 class DeserializationError(ErrorIndication):
     pass
-
 
 deserializationError = DeserializationError('SNMP message deserialization error')
 
@@ -55,13 +53,11 @@ deserializationError = DeserializationError('SNMP message deserialization error'
 class ParseError(DeserializationError):
     pass
 
-
 parseError = ParseError('SNMP message deserialization error')
 
 
 class UnsupportedMsgProcessingModel(ErrorIndication):
     pass
-
 
 unsupportedMsgProcessingModel = UnsupportedMsgProcessingModel('Unknown SNMP message processing model ID encountered')
 
@@ -69,13 +65,11 @@ unsupportedMsgProcessingModel = UnsupportedMsgProcessingModel('Unknown SNMP mess
 class UnknownPDUHandler(ErrorIndication):
     pass
 
-
 unknownPDUHandler = UnknownPDUHandler('Unhandled PDU type encountered')
 
 
 class UnsupportedPDUtype(ErrorIndication):
     pass
-
 
 unsupportedPDUtype = UnsupportedPDUtype('Unsupported SNMP PDU type encountered')
 
@@ -83,13 +77,11 @@ unsupportedPDUtype = UnsupportedPDUtype('Unsupported SNMP PDU type encountered')
 class RequestTimedOut(ErrorIndication):
     pass
 
-
 requestTimedOut = RequestTimedOut('No SNMP response received before timeout')
 
 
 class EmptyResponse(ErrorIndication):
     pass
-
 
 emptyResponse = EmptyResponse('Empty SNMP response message')
 
@@ -97,13 +89,11 @@ emptyResponse = EmptyResponse('Empty SNMP response message')
 class NonReportable(ErrorIndication):
     pass
 
-
 nonReportable = NonReportable('Report PDU generation not attempted')
 
 
 class DataMismatch(ErrorIndication):
     pass
-
 
 dataMismatch = DataMismatch('SNMP request/response parameters mismatched')
 
@@ -111,13 +101,11 @@ dataMismatch = DataMismatch('SNMP request/response parameters mismatched')
 class EngineIDMismatch(ErrorIndication):
     pass
 
-
 engineIDMismatch = EngineIDMismatch('SNMP engine ID mismatch encountered')
 
 
 class UnknownEngineID(ErrorIndication):
     pass
-
 
 unknownEngineID = UnknownEngineID('Unknown SNMP engine ID encountered')
 
@@ -125,20 +113,17 @@ unknownEngineID = UnknownEngineID('Unknown SNMP engine ID encountered')
 class TooBig(ErrorIndication):
     pass
 
-
 tooBig = TooBig('SNMP message will be too big')
 
 
 class LoopTerminated(ErrorIndication):
     pass
 
-
 loopTerminated = LoopTerminated('Infinite SNMP entities talk terminated')
 
 
 class InvalidMsg(ErrorIndication):
     pass
-
 
 invalidMsg = InvalidMsg('Invalid SNMP message header parameters encountered')
 
@@ -148,13 +133,11 @@ invalidMsg = InvalidMsg('Invalid SNMP message header parameters encountered')
 class UnknownCommunityName(ErrorIndication):
     pass
 
-
 unknownCommunityName = UnknownCommunityName('Unknown SNMP community name encountered')
 
 
 class NoEncryption(ErrorIndication):
     pass
-
 
 noEncryption = NoEncryption('No encryption services configured')
 
@@ -162,13 +145,11 @@ noEncryption = NoEncryption('No encryption services configured')
 class EncryptionError(ErrorIndication):
     pass
 
-
 encryptionError = EncryptionError('Ciphering services not available')
 
 
 class DecryptionError(ErrorIndication):
     pass
-
 
 decryptionError = DecryptionError('Ciphering services not available or ciphertext is broken')
 
@@ -176,13 +157,11 @@ decryptionError = DecryptionError('Ciphering services not available or ciphertex
 class NoAuthentication(ErrorIndication):
     pass
 
-
 noAuthentication = NoAuthentication('No authentication services configured')
 
 
 class AuthenticationError(ErrorIndication):
     pass
-
 
 authenticationError = AuthenticationError('Ciphering services not available or bad parameters')
 
@@ -190,13 +169,11 @@ authenticationError = AuthenticationError('Ciphering services not available or b
 class AuthenticationFailure(ErrorIndication):
     pass
 
-
 authenticationFailure = AuthenticationFailure('Authenticator mismatched')
 
 
 class UnsupportedAuthProtocol(ErrorIndication):
     pass
-
 
 unsupportedAuthProtocol = UnsupportedAuthProtocol('Authentication protocol is not supprted')
 
@@ -204,13 +181,11 @@ unsupportedAuthProtocol = UnsupportedAuthProtocol('Authentication protocol is no
 class UnsupportedPrivProtocol(ErrorIndication):
     pass
 
-
 unsupportedPrivProtocol = UnsupportedPrivProtocol('Privacy protocol is not supprted')
 
 
 class UnknownSecurityName(ErrorIndication):
     pass
-
 
 unknownSecurityName = UnknownSecurityName('Unknown SNMP security name encountered')
 
@@ -218,22 +193,37 @@ unknownSecurityName = UnknownSecurityName('Unknown SNMP security name encountere
 class UnsupportedSecurityModel(ErrorIndication):
     pass
 
-
 unsupportedSecurityModel = UnsupportedSecurityModel('Unsupported SNMP security model')
 
 
-class UnsupportedSecurityLevel(ErrorIndication):
+class UnsupportedSecLevel(ErrorIndication):
     pass
 
-
-unsupportedSecurityLevel = UnsupportedSecurityLevel('Unsupported SNMP security level')
+unsupportedSecLevel = UnsupportedSecurityLevel('Unsupported SNMP security level')
 
 
 class NotInTimeWindow(ErrorIndication):
     pass
 
-
 notInTimeWindow = NotInTimeWindow('SNMP message timing parameters not in windows of trust')
+
+
+class UnknownUserName(ErrorIndication):
+    pass
+
+unknownUserName = UnknownUserName('Unknown USM user')
+
+
+class WrongDigest(ErrorIndication):
+    pass
+
+wrongDigest = WrongDigest('Wrong SNMP PDU digest')
+
+
+class ReportPduReceived(ErrorIndication):
+    pass
+
+reportPduReceived = ReportPduReceived('Remote SNMP engine reported error')
 
 
 # SNMP access-control errors
@@ -241,13 +231,11 @@ notInTimeWindow = NotInTimeWindow('SNMP message timing parameters not in windows
 class NoSuchView(ErrorIndication):
     pass
 
-
 noSuchView = NoSuchView('No such MIB view currently exists')
 
 
 class NoAccessEntry(ErrorIndication):
     pass
-
 
 noAccessEntry = NoAccessEntry('Access to MIB node denined')
 
@@ -255,13 +243,11 @@ noAccessEntry = NoAccessEntry('Access to MIB node denined')
 class NoGroupName(ErrorIndication):
     pass
 
-
 noGroupName = NoGroupName('No such VACM group configured')
 
 
 class NoSuchContext(ErrorIndication):
     pass
-
 
 noSuchContext = NoSuchContext('SNMP context now found')
 
@@ -269,13 +255,11 @@ noSuchContext = NoSuchContext('SNMP context now found')
 class NotInView(ErrorIndication):
     pass
 
-
 notInView = NotInView('Requested OID is out of MIB view')
 
 
 class AccessAllowed(ErrorIndication):
     pass
-
 
 accessAllowed = AccessAllowed()
 
@@ -283,17 +267,12 @@ accessAllowed = AccessAllowed()
 class OtherError(ErrorIndication):
     pass
 
-
 otherError = OtherError('Unspecified SNMP engine error occurred')
 
-
-class ErrorReportReceived(ErrorIndication):
-    pass
 
 # SNMP Apps errors
 
 class OidNotIncreasing(ErrorIndication):
     pass
-
 
 oidNotIncreasing = OidNotIncreasing('OIDs are not increasing')
