@@ -3,8 +3,11 @@ Revision 4.3.6, released 2017-XX-XX
 -----------------------------------
 
 - Fixes to *lexicographicMode* option documentation to make it unambiguous.
-- Unified `errorIndication` values produced by various parts of SNMP engine
-  to be `ErrorIndication` instances. This fixes an issue with Twisted.
+- The `ErrorIndication` object is now derived from `Exception` so that it could
+  be raised in exceptions.
+- The `errorIndication` values produced by various parts of SNMP engine
+  unified to be `ErrorIndication` instances. This fixes an issue with Twisted.
+
 
 Revision 4.3.5, released 2017-03-24
 -----------------------------------
